<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.carrental.CarDetailsActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:id="@+id/car_image"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:src="@drawable/default_car" />

            <TextView
                android:id="@+id/tv_car_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/car_image"
                android:layout_below="@+id/car_image"
                android:text="@string/car_model"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tv_car_consumption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_car_model"
                android:layout_below="@+id/tv_car_model"
                android:text="@string/car_consumption"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tv_car_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_car_consumption"
                android:layout_below="@+id/tv_car_consumption"
                android:layout_marginBottom="10dp"
                android:text="@string/car_year"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tv_car_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_car_year"
                android:layout_below="@+id/tv_car_year"
                android:layout_marginBottom="10dp"
                android:text="@string/car_price"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/btn_rent"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btn_share"
                android:layout_alignBottom="@+id/btn_share"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:text="@string/car_rent" />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tv_car_price"
                android:layout_below="@+id/tv_car_price"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="18dp"
                android:text="@string/car_share" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>